changes to json

--- a/Job 3.html
+++ b/Job 3.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
     <title>Lilly and Company</title>
 
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet"
@@ -35,19 +34,19 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 1.html">Job 1</a>
+              <a class="nav-link" href="Job 1.html">Execution Lead/Business Analyst</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="Job 2.html">Job 2</a>
+              <a class="nav-link" href="Job 2.html">Database Analyst</a>
             </li>  
             <li class="nav-item">
-              <a class="nav-link" href="Job 3.html">Job 3</a>
+              <a class="nav-link" href="Job 3.html">Developer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 4.html">Job 4</a>
+              <a class="nav-link" href="Job 4.html">UX Desiner</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 5.html">Job 5</a>
+              <a class="nav-link" href="Job 5.html">IT Manager</a>
             </li>
           </ul>
         </div>
@@ -58,13 +57,13 @@
     <div class="container">
 
       <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">Job 3</h1>
+      <h1 class="mt-4 mb-3">Developer</h1>
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
           <a href="index.html">Home</a>
         </li>
-        <li class="breadcrumb-item active">Job 3</li>
+        <li class="breadcrumb-item active">Developer</li>
       </ol>
 
       <div class="row">
@@ -73,7 +72,7 @@
         <div class="col-lg-8">
 
           <!-- Preview Image -->
-          <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+          <img class="img-fluid rounded" src="https://www.outsystems.com/-/media/Images/Blog/Archive/2017/02/what_is_a_low_code_development_platform_fb.jpg" alt="">
 
           <hr>
 
@@ -102,6 +101,22 @@
 
       </div>
       <!-- /.row -->
+        <h2>Our Team</h2>
+        <ol></ol>
+        <div class="col-lg-4 mb-4">
+          <div class="card h-100 text-center">
+            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+            <div class="card-body">
+              <h4 class="card-title">Team Member2</h4>
+              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            </div>
+            <div class="card-footer">
+              <a href="#">name@example.com</a>
+            </div>
+          </div>
+        </div>
+      <!-- /.row -->
 
     </div>
     <!-- /.container -->
@@ -109,7 +124,7 @@
     <!-- Footer -->
     <footer class="end py-5">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; AG Eli Lilly 2018</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Ana Gomez 2018</p>
       </div>
       <!-- /.container -->
     </footer>
