--- a/contact.html
+++ b/contact.html
@@ -35,19 +35,19 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 1.html">Job 1</a>
+              <a class="nav-link" href="Job 1.html">Execution Lead/Business Analyst</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="Job 2.html">Job 2</a>
+              <a class="nav-link" href="Job 2.html">Database Analyst</a>
             </li>  
             <li class="nav-item">
-              <a class="nav-link" href="Job 3.html">Job 3</a>
+              <a class="nav-link" href="Job 3.html">Developer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 4.html">Job 4</a>
+              <a class="nav-link" href="Job 4.html">UX Desiner</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 5.html">Job 5</a>
+              <a class="nav-link" href="Job 5.html">IT Manager</a>
             </li>
           </ul>
         </div>
@@ -75,7 +75,7 @@
         <!-- Map Column -->
         <div class="col-lg-8 mb-4">
           <!-- Embedded Google Map -->
-          <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+          <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d49076.416126241114!2d-86.153081!3d39.755911!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1a312834829d65df!2sEli+Lilly+and+Company!5e0!3m2!1sen!2sus!4v1518361284080"></iframe>
         </div>
         <!-- Contact Details Column -->
         <div class="col-lg-4 mb-4">
@@ -146,7 +146,7 @@
     <!-- Footer -->
     <footer class="end py-5">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; AG Eli Lilly 2018</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Ana Gomez 2018</p>
       </div>
       <!-- /.container -->
     </footer>
