--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
     <title>Lilly and Company</title>
 
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet"
@@ -35,19 +34,19 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 1.html">Job 1</a>
+              <a class="nav-link" href="Job 1.html">Execution Lead/Business Analyst</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="Job 2.html">Job 2</a>
+              <a class="nav-link" href="Job 2.html">Database Analyst</a>
             </li>  
             <li class="nav-item">
-              <a class="nav-link" href="Job 3.html">Job 3</a>
+              <a class="nav-link" href="Job 3.html">Developer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 4.html">Job 4</a>
+              <a class="nav-link" href="Job 4.html">UX Desiner</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 5.html">Job 5</a>
+              <a class="nav-link" href="Job 5.html">IT Manager</a>
             </li>
           </ul>
         </div>
@@ -103,7 +102,7 @@
         </div>
         <div class="col-lg-6">
           <h2>About Lilly</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
+          <p>Eli Lily started with Colonel Lily </p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
         </div>
@@ -185,7 +184,7 @@
     <!-- Footer -->
     <footer class="end py-5">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; AG Eli Lilly 2018</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Ana Gomez 2018</p>
       </div>
       <!-- /.container -->
     </footer>
