--- a/Data-Analyst.html
+++ b/Data-Analyst.html
@@ -24,7 +24,7 @@
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Lilly</a>
+        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/Lilly-logo2.png"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,19 +34,19 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 1.html">Execution Lead/Business Analyst</a>
+              <a class="nav-link" href="Business-Analyst.html">Execution Lead/Business Analyst</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="Job 2.html">Database Analyst</a>
+              <a class="nav-link" href="Data-Analyst.html">Database Analyst</a>
             </li>  
             <li class="nav-item">
-              <a class="nav-link" href="Job 3.html">Developer</a>
+              <a class="nav-link" href="Developer.html">Developer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 4.html">UX Desiner</a>
+              <a class="nav-link" href="UX-Designer.html">UX Designer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 5.html">IT Manager</a>
+              <a class="nav-link" href="IT Manager.html">IT Manager</a>
             </li>
           </ul>
         </div>
@@ -73,50 +73,29 @@
 
           <!-- Preview Image -->
           <img class="img-fluid rounded" src="https://tdwi.org/~/media/TDWI/TDWI/BITW/spreadsheet2.jpg" alt="">
-
           <hr>
+           <!-- Post Content -->
+            <p class="lead">Database Analyst is a person doing what they do, analyzing data.</p>
 
-          <hr>
+            <p>She would draw a model or have a picture of what the data looks like. Most of the time it is a conceptional model but sometimes it can turn into a physical model. She checks if tools and supplies bought by the company are industry compatible.</p>
 
-          <!-- Post Content -->
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-
-          <blockquote class="blockquote">
-            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer">Someone famous in
-              <cite title="Source Title">Source Title</cite>
-            </footer>
-          </blockquote>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
-
+            <p>She works together with other companies such as financial trail to figure out the best possible outcome from the data. She spends most of their time mapping out the data, taking other data and putting it in their database, and merging external source data into the database. She would notify or alert if there is a problem in the data. Tool mostly used would be Excel Spreadsheets.</p>
           <hr>
         </div>
-
       </div>
       <!-- /.row -->
-        <h2>Our Team</h2>
+        <h2>Lilly Member</h2>
         <ol></ol>
         <div class="col-lg-4 mb-4">
           <div class="card h-100 text-center">
-            <img class="card-img-top" src="C:\Users\Nextech\Desktop\Lilyprojectwebsite\images\Colleen Data Analyst.jpg" alt="Colleen-DA">
+            <img class="card-img-top" src="images\Colleen Data Analyst.jpg" alt="Colleen-DA">
             <div class="card-body">
               <h4 class="card-title">Colleen</h4>
               <h6 class="card-subtitle mb-2 text-muted">Data Analyst</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#">name@example.com</a>
+              <p class="card-text">Colleen is one of the members from Lilly who I was introduce to. She is a data analyst for Lilly and works on making sure the data is placed inside the right database.</p>
             </div>
           </div>
         </div>
-
     </div>
     <!-- /.container -->
 
