--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Lilly</a>
+        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/Lilly-logo2.png"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,19 +35,19 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 1.html">Execution Lead/Business Analyst</a>
+              <a class="nav-link" href="Business-Analyst.html">Execution Lead/Business Analyst</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="Job 2.html">Database Analyst</a>
+              <a class="nav-link" href="Data-Analyst.html">Database Analyst</a>
             </li>  
             <li class="nav-item">
-              <a class="nav-link" href="Job 3.html">Developer</a>
+              <a class="nav-link" href="Developer.html">Developer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 4.html">UX Desiner</a>
+              <a class="nav-link" href="UX-Designer.html">UX Designer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 5.html">IT Manager</a>
+              <a class="nav-link" href="IT Manager.html">IT Manager</a>
             </li>
           </ul>
         </div>
@@ -59,9 +59,7 @@
     <div class="container">
 
       <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">Contact
-        <small>Subheading</small>
-      </h1>
+      <h1 class="mt-4 mb-3">Contact</h1>
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
@@ -81,20 +79,11 @@
         <div class="col-lg-4 mb-4">
           <h3>Contact Details</h3>
           <p>
-            3481 Melrose Place
-            <br>Beverly Hills, CA 90210
-            <br>
+            893 South Delaware Street
+            <br>Indianapolis, Indiana 46285 USA<br>
           </p>
           <p>
-            <abbr title="Phone">P</abbr>: (123) 456-7890
-          </p>
-          <p>
-            <abbr title="Email">E</abbr>:
-            <a href="mailto:name@example.com">name@example.com
-            </a>
-          </p>
-          <p>
-            <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM
+            <abbr title="Phone">P</abbr>: +1-317-276-2000
           </p>
         </div>
       </div>
