--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
   <body>
 
     <!-- Navigation -->
+    <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Lilly</a>
+        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/Lilly-logo2.png"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,19 +35,19 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 1.html">Execution Lead/Business Analyst</a>
+              <a class="nav-link" href="Business-Analyst.html">Execution Lead/Business Analyst</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="Job 2.html">Database Analyst</a>
+              <a class="nav-link" href="Data-Analyst.html">Database Analyst</a>
             </li>  
             <li class="nav-item">
-              <a class="nav-link" href="Job 3.html">Developer</a>
+              <a class="nav-link" href="Developer.html">Developer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 4.html">UX Desiner</a>
+              <a class="nav-link" href="UX-Designer.html">UX Designer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 5.html">IT Manager</a>
+              <a class="nav-link" href="IT Manager.html">IT Manager</a>
             </li>
           </ul>
         </div>
@@ -62,13 +63,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url('http://www.epacha.org/DATABASE1/ELI%20LILLY%20AND%20COMPANY%20LOGO%202.jpg')">
+          <div class="carousel-item active" style= "background-image: url('images/Lilly2.jpg');">
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('http://images.contentful.com/fb2v6y7lu57m/3mjGKZYruw02cOc6OSCiaK/1102d700cd478c5d56962240ff2c7f43/GDOS_2016_For_Better.jpg?w=740')">
+          <div class="carousel-item" style="background-image: url('images/Lilly-global-day.png');">
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('https://images.contentful.com/hadumfdtzsru/6KZ2Lbm5nGKEmCkEW6Waow/41bb302965d5bdfb459e72fc7a0b8ff6/WhoWeAre-LandingPage.jpg')">
+          <div class="carousel-item" style="background-image: url('images/Lilly-origin.jpg');">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -88,8 +89,8 @@
       <h1 class="my-4">Welcome to Lilly!</h1>
 
       <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">About
-        <small>ELi Lilly and Company</small>
+      <h1 class="mt-4 mb-3">
+        <small>Eli Lilly and Company</small>
       </h1>
 
       <ol class="breadcrumb">
@@ -102,12 +103,18 @@
         </div>
         <div class="col-lg-6">
           <h2>About Lilly</h2>
-          <p>Eli Lily started with Colonel Lily </p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+          <p>Eli Lilly and Company is a global pharmaceutical company headquartered in Indianapolis, Indiana, along with other offices in 18 countries. Its products are sold in approximately 125 countries. The company was founded in 1876 by Col. Eli Lilly, a pharmaceutical chemist and veteran of the American Civil War, after whom the company was named.</p>
+          <p>Lilly's notable achievements include being the first company to mass-produce the polio vaccine. Lilly has never merged with others and has always stayed Lilly. Eli Lilly is a company that wishes to make an impact in the 21st century by making medicine help people live longer healthier lives.</p>
         </div>
+        <blockquote class="blockquote">
+            <p class="mb-0">“Take what you find here and make it better and better.”</p>
+            <footer class="blockquote-footer">
+              <cite title="Source Title">Colonel Eli Lilly</cite>
+            </footer>
+        </blockquote>
       </div>
       <!-- /.row -->
+
 
       <!-- Team Members -->
       <h2>Lilly Goals</h2>
@@ -115,40 +122,28 @@
       <div class="row">
         <div class="col-lg-4 mb-4">
           <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+            <img class="card-img-top" src="images\chem.jpg" alt="">
             <div class="card-body">
-              <h4 class="card-title">Team Member1</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#">name@example.com</a>
+              <h4 class="card-title">Improve and Move Forward</h4>
+              <p class="card-text">Improving global health in the 21st century. Using resources and expertise to advance medicine and health around the world.</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+            <img class="card-img-top" src="images\patients.jpg" alt="">
             <div class="card-body">
-              <h4 class="card-title">Team Member2</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#">name@example.com</a>
+              <h4 class="card-title">Caring for People</h4>
+              <p class="card-text">Devote time, resources, and expertise with the goal of making people live longer, healthier, more active lives.</p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+            <img class="card-img-top" src="images\med.jpg" alt="">
             <div class="card-body">
-              <h4 class="card-title">Team Member3</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#">name@example.com</a>
+              <h4 class="card-title">Impact on Medicine</h4>
+              <p class="card-text">Make a significant contribution to humanity by pursue pharmaceutical innovation and provide high quality products</p>
             </div>
           </div>
         </div>
@@ -156,25 +151,25 @@
       <!-- /.row -->
 
       <!-- Our Customers -->
-      <h2>Our Customers</h2>
+      <h2>Competitors</h2>
       <div class="row">
         <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+          <img class="img-fluid" src="images\Roche.png" alt="">
         </div>
         <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+          <img class="img-fluid" src="images\Merck.jpg" alt="">
         </div>
         <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+          <img class="img-fluid" src="images\Pfizer.jpg" alt="">
         </div>
         <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+          <img class="img-fluid" src="images\MannKind-corp.jpg" alt="">
         </div>
         <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+          <img class="img-fluid" src="images\GSK.jpg" alt="">
         </div>
         <div class="col-lg-2 col-sm-4 mb-4">
-          <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+          <img class="img-fluid" src="C:\Users\Nextech\Desktop\Lilyprojectwebsite\images\" alt="">
         </div>
       </div>
       <!-- /.row -->
