--- a/Business-Analyst.html
+++ b/Business-Analyst.html
@@ -24,7 +24,7 @@
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Lilly</a>
+        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/Lilly-logo2.png"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,19 +34,19 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 1.html">Execution Lead/Business Analyst</a>
+              <a class="nav-link" href="Business-Analyst.html">Execution Lead/Business Analyst</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="Job 2.html">Database Analyst</a>
+              <a class="nav-link" href="Data-Analyst.html">Database Analyst</a>
             </li>  
             <li class="nav-item">
-              <a class="nav-link" href="Job 3.html">Developer</a>
+              <a class="nav-link" href="Developer.html">Developer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 4.html">UX Desiner</a>
+              <a class="nav-link" href="UX-Designer.html">UX Designer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 5.html">IT Manager</a>
+              <a class="nav-link" href="IT Manager.html">IT Manager</a>
             </li>
           </ul>
         </div>
@@ -73,46 +73,26 @@
 
           <!-- Preview Image -->
           <img class="img-fluid rounded" src="https://www.juntadeandalucia.es/cultura/redportales/comunidadprofesional/sites/default/files/claves-para-realizar-presentaciones-efectivas.jpg" alt="">
-
           <hr>
+           <!-- Post Content -->
+            <p class="lead">The Executive Lead or Business Analyst is the person in between the technical side of a product and the business side.</p>
 
-          <hr>
+            <p> Nora figures out the requirements of the product and its production such as the time and cost. She figures out a timeline and who is involved in the timeline as well as a design for the product. She talks to the business about what they want and also to the developers about what the product can actually do.</p>
 
-          <!-- Post Content -->
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-
-          <blockquote class="blockquote">
-            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer">Someone famous in
-              <cite title="Source Title">Source Title</cite>
-            </footer>
-          </blockquote>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
-
+            <p>She accesses the database and pulls any data that is needed. Weekly meetings are set up to check what has been done and get status reports for the businesses. She write a lot documents and completes paper such as validation documentation. Tools used would be Outlook for email and calendar, Excel, Powerpoint, Microsoft Word and Skype.</p>
           <hr>
         </div>
-
       </div>
       <!-- /.row -->
-        <h2>Our Team</h2>
+        <h2>Lilly Member</h2>
         <ol></ol>
         <div class="col-lg-4 mb-4">
           <div class="card h-100 text-center">
-            <img class="card-img-top" src="C:\Users\Nextech\Desktop\Lilyprojectwebsite\images/Nora Business Analyst.jpg" alt="Nora-BA">
+            <img class="card-img-top" src="images/Nora Business Analyst.jpg" alt="Nora-BA">
             <div class="card-body">
               <h4 class="card-title">Nora</h4>
               <h6 class="card-subtitle mb-2 text-muted">Business Analyst</h6>
-              <p class="card-text">Nora is my mentor and has been helping me gather information for this project.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#">name@example.com</a>
+              <p class="card-text">Nora is an executive lead for Lilly. She helps keep the product on time. She is also my mentor and introduced me to the other members in Lilly.</p>
             </div>
           </div>
         </div>
