--- a/Developer.html
+++ b/Developer.html
@@ -24,7 +24,7 @@
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Lilly</a>
+        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/Lilly-logo2.png"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,25 +34,24 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 1.html">Execution Lead/Business Analyst</a>
+              <a class="nav-link" href="Business-Analyst.html">Execution Lead/Business Analyst</a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="Job 2.html">Database Analyst</a>
+              <a class="nav-link" href="Data-Analyst.html">Database Analyst</a>
             </li>  
             <li class="nav-item">
-              <a class="nav-link" href="Job 3.html">Developer</a>
+              <a class="nav-link" href="Developer.html">Developer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 4.html">UX Desiner</a>
+              <a class="nav-link" href="UX-Designer.html">UX Designer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Job 5.html">IT Manager</a>
+              <a class="nav-link" href="IT Manager.html">IT Manager</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
     <!-- Page Content -->
     <div class="container">
 
@@ -67,52 +66,30 @@
       </ol>
 
       <div class="row">
-
         <!-- Post Content Column -->
         <div class="col-lg-8">
 
           <!-- Preview Image -->
-          <img class="img-fluid rounded" src="https://www.outsystems.com/-/media/Images/Blog/Archive/2017/02/what_is_a_low_code_development_platform_fb.jpg" alt="">
+          <img class="img-fluid rounded" src="images/codeDev.jpg" alt="">
 
           <hr>
+           <!-- Post Content -->
+            <p class="lead">A developer is someone who is in charge of the coding aspect of a product.</p>
 
-          <hr>
-
-          <!-- Post Content -->
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-
-          <blockquote class="blockquote">
-            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer">Someone famous in
-              <cite title="Source Title">Source Title</cite>
-            </footer>
-          </blockquote>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
-
+            <p>He  would code every day after they receive the requirements from the business. He divide the work into sprints which are done daily. He design the code with either actual developing tasks or for Java, Swift, or other languages. His daily coding can often be done in the comfort of their home as well.</p>
           <hr>
         </div>
-
       </div>
       <!-- /.row -->
-        <h2>Our Team</h2>
+        <h2>Lilly Member</h2>
         <ol></ol>
         <div class="col-lg-4 mb-4">
           <div class="card h-100 text-center">
-            <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+            <img class="card-img-top" src="images/developer.jpg" alt="">
             <div class="card-body">
-              <h4 class="card-title">Team Member2</h4>
-              <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#">name@example.com</a>
+              <h4 class="card-title"></h4>
+              <h6 class="card-subtitle mb-2 text-muted">Developer</h6>
+              <p class="card-text">He is a developer and is in charge on coding and making sure the product functions fluidly. He is another member I met and told me about how his work schedule is like.</p>
             </div>
           </div>
         </div>
